<?xml version="1.0"?>
<package format="2">
  <name>vl53l0x_mraa_ros</name>
  <version>0.0.0</version>
  <description>The vl53l0x_mraa_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pazeshun@todo.todo">pazeshun</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libmraa1</depend>
  <depend>libmraa-dev</depend>
  <depend>mraa-tools</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
